Added refactored